--- a/examples/bundler-webpack-demo/index.html
+++ b/examples/bundler-webpack-demo/index.html
@@ -11,6 +11,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://gw.alipayobjects.com/os/lib/react/18.0.0-alpha-fd5e01c2e-20210913/umd/react.production.min.js"></script>
+    <script src="https://gw.alipayobjects.com/os/lib/react-dom/18.0.0-alpha-fd5e01c2e-20210913/umd/react-dom.production.min.js"></script>
     <script src="/index.js"></script>
   </body>
 </html>
