--- a/examples/boilerplate/index.html
+++ b/examples/boilerplate/index.html
@@ -14,5 +14,6 @@
     <!--    <script src="https://gw.alipayobjects.com/os/lib/react/18.0.0-alpha-fd5e01c2e-20210913/umd/react.production.min.js"></script>-->
     <!--    <script src="https://gw.alipayobjects.com/os/lib/react-dom/18.0.0-alpha-fd5e01c2e-20210913/umd/react-dom.production.min.js"></script>-->
     <script src="/umi.js"></script>
+    <!--    <script type="module" src="/.umi/umi.ts"></script>-->
   </body>
 </html>
